feat: v2.00 — LEAVE/ITERATE/STOP, BY clause, INIT, BIT, ON ENDFILE, built-ins
Major language-coverage release:
- Control flow: LEAVE → break, ITERATE → continue, STOP → System.exit(0)
- DO FROM/TO with BY clause (positive or negative literal step)
- DCL ... INIT(value) initializer on scalar declarations
- BIT(n) type mapped to Java boolean ('1'b → true)
- ON ENDFILE('fname') handler; READ wrapped in null-check that fires handler
- 17 new built-ins: length, trim, lowercase, uppercase, repeat, reverse,
  abs, sqrt, ceil, floor, round, trunc, sign, max, min, date, time
- 10 new tests (test20–test29); full suite passes 29/29
- Runtime: replace deprecated Class.newInstance() with getDeclaredConstructor()
  in PliJavaRuntime and tighten SQL error reporting

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>